@@ -1,5 +1,7 @@
 Revision history for Web::Components
 
+          - Redirect preserves query_form when adding message id
+
 0.6.1     2016-03-16 00:06:00
           - Added new signature to response filter
             Can now pass the action path as the first arg instead of
